- Fixed bug #45798 (sqlite3 doesn't notice if variable was bound)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@264699 c90b9560-bf6c-de11-be94-00142212c4b1