ext/sqlite3/sqlite3.c
@@ -1096,6 +1096,7 @@ PHP_METHOD(sqlite3stmt, execute)
 			/* If the ZVAL is null then it should be bound as that */
 			if (Z_TYPE_P(param->parameter) == IS_NULL) {
 				sqlite3_bind_null(stmt_obj->stmt, param->param_number);
+				zend_hash_move_forward(stmt_obj->bound_params);
 				continue;
 			}
 
